Tweak logging configs

--- a/config/prospector_scanner.conf
+++ b/config/prospector_scanner.conf
@@ -98,15 +98,8 @@ CONFIG_PROSPECTOR_SCANNER_TIMEOUT_MS=480000
 # Disable unused features
 CONFIG_ZMK_SPLIT=n
 
-# Disable serial/USB features that are causing Kconfig warnings
-CONFIG_SERIAL=n
-CONFIG_UART_CONSOLE=n
-CONFIG_USB_CDC_ACM=n
-
-# Enable debug logging only (without serial console)
-CONFIG_LOG=y
-CONFIG_ZMK_LOG_LEVEL_DBG=y
-CONFIG_LOG_MODE_IMMEDIATE=y
+# Logging
+CONFIG_INPUT_LOG_LEVEL_DBG=y
 
 # Note: USB serial debugging is not available in scanner mode
 # Use visual debugging - watch display brightness changes
