Add cst816s touch sensor configurations

--- a/config/prospector_scanner.conf
+++ b/config/prospector_scanner.conf
@@ -11,6 +11,11 @@ CONFIG_BT_OBSERVER=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_DISPLAY=y
 
+# CST816S Touch Controller Configuration
+CONFIG_INPUT=y
+CONFIG_INPUT_CST816S=y
+CONFIG_INPUT_CST816S_INTERRUPT=y
+
 # LVGL Configuration
 CONFIG_LVGL=y
 
